# smart-contracts-wager-example

./: .tool-versions  README.md  pyproject.toml
contracts/: wager.sol
tests/: test_unit_wager.py  test_wager.py
web/: .env-sample  package.json
